--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "htmlstrip-native": "^0.1.1",
     "simplecrawler":"^0.5.2",
     "unfluff":"^0.11.0",
-    "async":"1.2.1"
+    "async":"1.2.1",
+    "firebase":"^2.2.7"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
