--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "unfluff":"^0.11.0",
     "async":"1.2.1",
     "firebase":"^2.2.7",
-    "mysql":"2.8.0"
+    "mysql":"2.8.0",
+    "underscore":"^1.8.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
